(library
 (name dia)
 (libraries menhirLib)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_deriving.show)))

(menhir
 (flags --table)
 (modules parser))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(ocamllex lexer)
